scrollbar fix

--- a/AgroApp/src/AgroApp/wwwroot/css/site.css
+++ b/AgroApp/src/AgroApp/wwwroot/css/site.css
@@ -51,7 +51,7 @@
     top: 0;
     width: 100%;
     background-color: #90CAF9;
-    z-index: 0;
+    z-index: -1;
 }
 
 .header-background {
